--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-cloud": "4.24.4",
     "@strapi/plugin-i18n": "4.24.4",
     "@strapi/plugin-users-permissions": "4.24.4",
+    "@strapi/provider-upload-cloudinary": "^4.24.4",
     "@strapi/strapi": "4.24.4",
     "axios": "^1.7.2",
     "pg": "8.8.0",
