--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@amicaldo/strapi-google-maps": "^1.1.5",
+    "@strapi/design-system": "^1.18.0",
     "@strapi/plugin-cloud": "4.24.4",
     "@strapi/plugin-i18n": "4.24.4",
     "@strapi/plugin-users-permissions": "4.24.4",
     "@strapi/provider-upload-cloudinary": "^4.24.4",
     "@strapi/strapi": "4.24.4",
+    "@uiw/react-codemirror": "^4.22.1",
     "axios": "^1.7.2",
     "pg": "8.8.0",
     "react": "^18.0.0",
